배포용 api 수정 및 회원가입 폼 수정